@@ -1,5 +1,5 @@
-// 1.20.1	2023-09-06T13:59:49.230517	Global Loot Modifiers : l2hostility
-da20ad0a5307437b82af55afbc3438156ea465a1 data/forge/loot_modifiers/global_loot_modifiers.json
+// 1.20.1	2023-09-11T08:55:38.495819	Global Loot Modifiers : l2hostility
+fadc464a8efae798622813ba222921644fd0643a data/forge/loot_modifiers/global_loot_modifiers.json
 71c3d84efb2863fa013f196cf603381ee5e4d875 data/l2hostility/loot_modifiers/adaptive_drop_cursed_droplet.json
 9b0c9dca753c5f8f2009e01878642ffb19c51a7f data/l2hostility/loot_modifiers/blindness_drop_ink_sac.json
 270e1a9250c021dbf244c3ecca5615b9696edaf8 data/l2hostility/loot_modifiers/cursed_drop_cursed_droplet.json
@@ -25,6 +25,9 @@ cac003749c4b8eaab96023c6433ddff0ac423992 data/l2hostility/loot_modifiers/speedy_
 b02f026a3f309fc13a0670af08e7873154ba28d1 data/l2hostility/loot_modifiers/speedy_drop_rabbit_foot.json
 b70eaca9cfa7f417ebc16334be6e95b64d361c7d data/l2hostility/loot_modifiers/tank_drop_diamond.json
 b013d5215303c31ac391ee266534a4519316860e data/l2hostility/loot_modifiers/tank_drop_netherite_scrap.json
+e1948b9163c5f86f133b2196fba60d0563688d12 data/l2hostility/loot_modifiers/tank_drop_sculkium_nugget.json
+ed74a99d97576698e2f87aaeefd2bd9960133d97 data/l2hostility/loot_modifiers/tank_drop_shulkerate_ingot.json
+ebc473514955e96053d05f5bb032cf80caefb370 data/l2hostility/loot_modifiers/tank_drop_shulkerate_nugget.json
 321913f8dc5c8cfc28037cdbc21517a11921aaaa data/l2hostility/loot_modifiers/teleport_drop_void_eye.json
 42e293691d5f2688c2b127c14f7825d6bddcaa52 data/l2hostility/loot_modifiers/undying_drop_life_essence.json
 dc770821099e84a340dfb8e51db1fd5f19c6350a data/l2hostility/loot_modifiers/undying_drop_totem_of_undying.json
