@@ -31,9 +31,10 @@
   "l2hostility.item.wand.ai": "˙IⱯ qoɯ ǝɹoʇsǝɹ ɹo ǝʌoɯǝɹ oʇ ʞɔıןɔ ʇɥbıᴚ",
   "l2hostility.item.wand.equipment": "˙nuǝɯ ʇuǝɯdınbǝ qoɯ uǝdo oʇ ʞɔıןɔ ʇɥbıᴚ",
   "l2hostility.item.wand.target": "˙ɹǝɥʇo ɥɔɐǝ ʇɥbıɟ ɯǝɥʇ ǝʞɐɯ oʇ sqoɯ ᄅ ʞɔıןɔ ʇɥbıᴚ",
-  "l2hostility.jei.loot_chance": "%s ʞuɐᴚ ʇɐ doɹp oʇ ǝɔuɐɥɔ %s%%",
+  "l2hostility.jei.loot_chance": "%s ʞuɐɹ %s ɹoɟ doɹp oʇ ǝɔuɐɥɔ %s%%",
   "l2hostility.jei.loot_title": "ʇooꞀ ʇıɐɹ⟘",
   "l2hostility.jei.min_level": "ɹǝɥbıɥ ɹo %s ןǝʌǝן ɥʇıʍ sqoɯ uo sdoɹᗡ",
+  "l2hostility.jei.other_trait": "%s ʞuɐɹ ʇɐ %s ǝʌɐɥ osןɐ oʇ sqoɯ sǝɹınbǝᴚ",
   "l2hostility.msg.ai": "˙%s oʇ IⱯoN ʇǝS :%s ǝɹnbıɟuoƆ",
   "l2hostility.msg.err_disallow": "ʎʇıʇuǝ sıɥʇ uo ǝןqɐɔıןddɐ ʇou ʇıɐɹ⟘",
   "l2hostility.msg.err_max": "ǝnןɐʌ xɐɯ pǝɥɔɐǝɹ ʎpɐǝɹןɐ ןǝʌǝן ʇıɐɹ⟘",
