@@ -31,9 +31,10 @@
   "l2hostility.item.wand.ai": "Right click to remove or restore mob AI.",
   "l2hostility.item.wand.equipment": "Right click to open mob equipment menu.",
   "l2hostility.item.wand.target": "Right click 2 mobs to make them fight each other.",
-  "l2hostility.jei.loot_chance": "%s%% chance to drop at Rank %s",
+  "l2hostility.jei.loot_chance": "%s%% chance to drop for %s rank %s",
   "l2hostility.jei.loot_title": "Trait Loot",
   "l2hostility.jei.min_level": "Drops on mobs with level %s or higher",
+  "l2hostility.jei.other_trait": "Requires mobs to also have %s at rank %s",
   "l2hostility.msg.ai": "Configure %s: Set NoAI to %s.",
   "l2hostility.msg.err_disallow": "Trait not applicable on this entity",
   "l2hostility.msg.err_max": "Trait level already reached max value",
