@@ -10,7 +10,10 @@
     "l2hostility:speedy_drop_rabbit_foot",
     "l2hostility:teleport_drop_void_eye",
     "l2hostility:levitation_drop_captured_shulker_bullet",
+    "l2hostility:tank_drop_shulkerate_nugget",
+    "l2hostility:tank_drop_shulkerate_ingot",
     "l2hostility:regenerate_drop_totemic_gold_nugget",
+    "l2hostility:tank_drop_sculkium_nugget",
     "l2hostility:wither_drop_wither_rose",
     "l2hostility:reflect_drop_explosion_shard",
     "l2hostility:invisible_drop_phantom_membrane",
