@@ -1,0 +1,27 @@
+{
+  "type": "l2hostility:trait_scaled",
+  "chance": 0.0,
+  "conditions": [
+    {
+      "condition": "minecraft:killed_by_player"
+    },
+    {
+      "condition": "l2hostility:trait_and_level",
+      "maxLevel": 5,
+      "minLevel": 3,
+      "trait": "l2hostility:tank"
+    },
+    {
+      "condition": "l2hostility:trait_and_level",
+      "maxLevel": 5,
+      "minLevel": 3,
+      "trait": "l2hostility:speedy"
+    }
+  ],
+  "rankBonus": 0.1,
+  "result": {
+    "Count": 4,
+    "id": "l2complements:sculkium_nugget"
+  },
+  "trait": "l2hostility:tank"
+}
