@@ -2,6 +2,7 @@
 - Fix MobCapLootCondition
 - Add weapon config
 - Add entity config, remove entityMap from difficulty config
+- Add multi-trait conditions JEI support and examples
 
 2.4.5
 - Fix chunk not marked dirty when using hostility orb
